--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </section>
                     
                 <section class="intro">
-                    <h1 class="display-4 mb-5">
+                    <h1 class="display-4 mb-5 titulo-portfolio">
                         Portfolio
                     </h1>
 
@@ -75,7 +75,7 @@
                 </section>
 
                 <section class="projects">
-                    <h2 class="display-6 mb-5">
+                    <h2 class="display-6 mb-5 titulo-proyectos">
                         Proyectos
                     </h2>
 
@@ -92,7 +92,7 @@
                 </section>
 
                 <section class="skills-&-tools">
-                    <h2 class="display-6 mb-1">
+                    <h2 class="display-6 mb-1 titulo-skills">
                         Skills y herramientas
                     </h2>
                     <img src="public/img/skills&tools.png" alt="skills y herramientas" class="img-fluid">
@@ -122,11 +122,14 @@
                     </p>
                 </section>
 
-                <section class="contact">
-                    <h2 class="display-6 mb-5">
+                <section class="contact-desktop">
+                    <h2 class="display-6 mb-5 titulo-contacto">
                         Contacto
                     </h2>
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSej-0UY0YQY5M6Op3jjtPUItXzPQSKahpD2UPkjUkTqhyEcuA/viewform?embedded=true" width="670" height="729" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+                </section>
+                <section class="contact-mobile">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSej-0UY0YQY5M6Op3jjtPUItXzPQSKahpD2UPkjUkTqhyEcuA/viewform?embedded=true" width="320" height="709" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
                 </section>
 
 
