modificaciones responsive adicionales

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="row text-center align-items-center full-height">
                 <div class="col">
                     <img src="public/img/avatar.png" alt="martin-malandra-avatar" class="avatar">
-                    <p class="display-5">Martín Malandra</p>
+                    <p class="display-5 titulo-nombre">Martín Malandra</p>
                     <p>Desarrollador Web Jr.</p>
                     <a href="https://linktr.ee/memdev_ok" target="_blank">
                         <img src="public/img/linktree-qr.png" alt="linktree qr" class="qr-code">
