modificacion en el form

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </h2>
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSej-0UY0YQY5M6Op3jjtPUItXzPQSKahpD2UPkjUkTqhyEcuA/viewform?embedded=true" width="670" height="729" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
                 </section>
-                <section class="contact-mobile">
+                <section class="container-fluid contact-mobile text-center align-items-center">
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSej-0UY0YQY5M6Op3jjtPUItXzPQSKahpD2UPkjUkTqhyEcuA/viewform?embedded=true" width="320" height="709" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
                 </section>
 
